databases/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
      targetPort: 3306
    - name: mysql-exporter
      protocol: TCP
      port: 9104
      targetPort: 9104
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-read
  labels:
    app: mysql
    role: read-replica
spec:
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
    mysql-role: replica
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
      app.kubernetes.io/name: mysql
  serviceName: mysql
  replicas: 2
  template:
    metadata:
      labels:
        app: mysql
        app.kubernetes.io/name: mysql
    spec:
      serviceAccountName: mysql-annotator-sa 
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        - name: mysql-socket
          mountPath: /var/run/mysqld
        - name: mysql-logs
          mountPath: /var/log/mysql
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: "1000m"
            memory: "2Gi"
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping", "-uroot"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command: ["mysql", "-uroot","-e", "SELECT 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
        lifecycle:
          postStart:
            exec:
              command:
                - sh
                - -c
                - |
                  # Wait for MySQL to be ready, if this container is being run as an init or postStart hook
                  until mysql -uroot -e "SELECT 1" >/dev/null 2>&1; do sleep 2; done

                  if [[ "$HOSTNAME" == "mysql-0" ]]; then
                      echo "Running initial root grants and DB creation..."
                      mysql -uroot <<'EOF'
                  CREATE USER IF NOT EXISTS 'root'@'%' IDENTIFIED BY '';
                  GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
                  FLUSH PRIVILEGES;
                  CREATE DATABASE IF NOT EXISTS employee_management;
                  EOF
                  fi
      - name: xtrabackup
        # image: gcr.io/google-samples/xtrabackup:1.0
        image: mostafaibrahim24/xtrabackup:5.7 
        ports:
        - name: xtrabackup
          containerPort: 3307
        imagePullPolicy: Always # This is where you specify the policy
        command:
        - bash
        - "-c"
        - |
          [...]
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: conf
          mountPath: /etc/mysql/conf.d
        - name: mysql-socket
          mountPath: /var/run/mysqld
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
      - name: mysql-exporter
        image: prom/mysqld-exporter
        ports:
          - name: tcp
            protocol: TCP
            containerPort: 9104
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        args:
          - --mysqld.username=root
          - --mysqld.address=127.0.0.1:3306
          - --collect.global_status
          - --collect.global_variables
          - --collect.info_schema.tables
          - --collect.perf_schema.tablelocks
          - --collect.perf_schema.file_events
          - --collect.perf_schema.eventswaits
          - --collect.perf_schema.indexiowaits
          - --collect.perf_schema.tableiowaits
          - --collect.perf_schema.eventsstatements
          - --collect.perf_schema.eventsstatementssum
        startupProbe:               
          tcpSocket:
            port: 3306
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 30
        
      volumes:
      - name: conf
        emptyDir: {}
      - name: config-map
        configMap:
          name: mysql
      - name: mysql-socket
        emptyDir: {}
      - name: mysql-logs
        emptyDir: {}   # for promtail

  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
